Many chaos changes

--- a/app_server/views/blogDelete.pug
+++ b/app_server/views/blogDelete.pug
@@ -3,8 +3,8 @@ extends layout
 block content
     .card.text-success.bg-dark.mb-3(style="width: 30%;")
       .card-body
-        h5.card-title #{blogs.title}
-        p.card-text #{blogs.text}
+        h5.card-title #{blog.title}
+        p.card-text #{blog.text}
 
         ul.nav.justify-content-end.nav-pills.card-header-pills.text-primary
           li.nav-item
