--- a/app_server/views/blogEdit.pug
+++ b/app_server/views/blogEdit.pug
@@ -1,5 +1,24 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title} features coming soon.
+    .card.text-success.bg-dark.mb-3(style="width: 30%;")
+      .card-body
+        form(action=`/edit/${blog._id}` method='post')
+          input(type='text' name='title' placeholder='title' value = blog.title)
+          br
+          textarea(name='text' placeholder='') #{blog.text}
+          br
+          button(type='submit') Submit
+
+
+        ul.nav.justify-content-end.nav-pills.card-header-pills.text-primary
+          li.nav-item
+          a.nav-link(href='/list')
+            i.fas.fa-ban  
+          li.nav-item
+          a.nav-link(href='/list')
+            i.fas.fa-trash-alt
+
+
+
+      script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js")
