--- a/app_server/views/blogs-list.pug
+++ b/app_server/views/blogs-list.pug
@@ -6,13 +6,12 @@ block content
       .card-body
         h5.card-title #{blog.title}
         p.card-text #{blog.text}
-
         ul.nav.justify-content-end.nav-pills.card-header-pills.text-primary
           li.nav-item
-          a.nav-link(href='/edit')
+          a.nav-link(href=`/edit/${blog._id}`)
             i.fas.fa-edit 
           li.nav-item
-          a.nav-link(href='/delete')
+          a.nav-link(href=`/delete/${blog._id}`)
             i.fas.fa-trash-alt
 
 
