--- a/app_server/views/blogs-list.pug
+++ b/app_server/views/blogs-list.pug
@@ -6,12 +6,13 @@ block content
       .card-body
         h5.card-title #{blog.title}
         p.card-text #{blog.text}
+        p2.card-text #{blog.createdOn}
         ul.nav.justify-content-end.nav-pills.card-header-pills.text-primary
           li.nav-item
-          a.nav-link(href=`/edit/${blog._id}`)
-            i.fas.fa-edit 
+          a.nav-link(href=`/edit/${blog._id}` style="color: #198754")
+            i.fas.fa-edit
           li.nav-item
-          a.nav-link(href=`/delete/${blog._id}`)
+          a.nav-link(href=`/delete/${blog._id}` style="color: #198754;")
             i.fas.fa-trash-alt
 
 
